platform/cluster/rabbitmq/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
  labels:
    name: rabbitmq
    app.kubernetes.io/part-of: platform
