platform/cluster/rabbitmq/service-amqp-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-amqp-nodeport
  namespace: rabbitmq
  labels:
    app: rabbitmq
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: platform
    app.kubernetes.io/component: amqp-external
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: amqp
      nodePort: 30567
      protocol: TCP
